# yanantin

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
.claude/: heartbeat_state.json  settings.json
.claude/hooks/: capture_compaction.py  chasqui_heartbeat.sh  chasqui_pulse.py  ots_stamp.py  precompact_tensor.py
.githooks/: post-commit
.github/workflows/: separation.yml
agents/: scout_reviewer.md  structured_reviewer.md
docs/: apacheta.md  blueprint.md  entropy_code_experiment_v2.md  predecessors.md  scout_report_indaleko_patterns.md  scout_report_tensor_schema.md  signing.md  tensors.md
docs/cairn/: T0_20260207_bounded_verification.md  T10_20260209_post_compaction.md  T11_20260210_the_immune_system.md  T12_20260210_the_fortress.md  T13_20260211_the_gradient.md  T14_20260211_the_flatworm.md  T15_20260212_the_enemy.md  T1_20260207_seven_projects.md  T2_20260207_calibration_recovery.md  T3_20260208_the_finishing_school.md  T4_20260208_rcs_observer.md  T5_20260208_post_paper.md  T6_20260207_built_then_saw.md  T7_20260208_the_wanderer.md  T9_20260210_the_wheel.md  conversation_tensor_20260207.md  conversation_tensor_20260207_session2.md  conversation_tensor_20260207_session2_t6.md  conversation_tensor_20260207_session3.md  conversation_tensor_20260208_chatgpt_t4.md  conversation_tensor_20260208_chatgpt_t5.md  conversation_tensor_20260208_session2_t7.md  conversation_tensor_20260208_t3.md  scour_0001_20260212_gemma-2-9b-it.md  scour_0002_20260212_gpt-4o-mini.md  scour_0003_20260212_olmo-3.1-32b-think.md  (+608 more)
scripts/: __init__.py  ingest_cairn.py
(+186 files in other folders)
