[project]
name = "yanantin"
version = "0.1.0"
description = "Complementary duality between human and AI — composable tensor infrastructure"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "opentimestamps>=0.4.5",
    "pydantic>=2.0",
    "httpx>=0.27",
    "duckdb>=1.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yanantin"]
